# ydpanProject

./: README.md  VirtualDevice.ini  aravis-0.6.0.tar.xz  layout_tray.txt  src.rar
CamSDK/: CamSDK.sln
DocData/: GVCP.xlsx
QCustomGUI/: copy_dll.bat
QCustomGUILib/: QCustomGUI.qrc  QCustomGUI.sdf  QCustomGUI.sln  QCustomGUI.vcxproj  QCustomGUI.vcxproj.filters
QGraphviewGUI/: qgraphviewgui_global.h
QVIPSystem/: QVIPSystem.sln
boostProject/: CMakeLists.txt
boostProject/Resources/: boostSeriport.qrc
boostProject/include/: DeviceInfo.cpp  DeviceInfo.h  LPGigeVisionRegister.h  SerialPortDevice.h  VirtualDevice.cpp  VirtualDevice.h  boostSeriport.h  udpserver.h
boostProject/include/MV/: MVGigEVisionDeviceDefine.h  MVGigEVisionGVCPDefine.h  MVPixelType.h
boostProject/src/: SerialPortDevice.cpp  boostSeriport.cpp  boostSeriport.ui  main.cpp  udpserver.cpp
boostProject/threPart/: UdpLinkServer.cpp  UdpLinkServer.h  UdpLinkServer_testSend.cpp  UdpLinkServer_testrecv.cpp  async_udpserver.cpp
boostProject/tpvs17/: boostProject.sln
boostProject/tpvs17/boostSeriport/: DeviceDefine.h  GVCPDevice.cpp  GVCPDevice.h  GVSPDevice.cpp  GVSPDevice.h  IDevice.h  ImageBuffer.cpp  ImageBuffer.h  QUdpTestUI.cpp  QUdpTestUI.h  QUdpTestUI.ui  boostSeriport.vcxproj  boostSeriport.vcxproj.filters  fakeCamera.cpp  fakeCamera.h  gvcp.cpp  gvcp.h  gvsp.cpp  gvsp.h  pixformat.h  udpSender.cpp  udpSender.h
boostProject/tpvs17/boostThread/: Mythreadpool.cpp  Mythreadpool.h  boostThread.vcxproj  boostThread.vcxproj.filters  main.cpp
boostSeriport/: boostSeriport.sln
customGUIDemo/: customGUIDemo.cpp  customGUIDemo.h  customGUIDemo.qrc  customGUIDemo.ui  (+4 more)
(+296 files in other folders)
